# wireguard-android

./: BUILD.gn  README.chromium
tunnel/: build.gradle.kts
tunnel/src/main/java/com/wireguard/android/backend/: GoBackend.java  Statistics.java
ui/: build.gradle.kts  lint-baseline.xml
